Initial commit: Lost and Found MERN Application

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,3 @@
-# db=mongodb+srv://odhakne542:omkar@123@cluster0.eka0ahu.mongodb.net/lost?retryWrites=true&w=majority&appName=Cluster0
-
 PORT=4000
-DB=mongodb+srv://odhakne542:omkar%40123@cluster0.eka0ahu.mongodb.net/lost?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://odhakne542:omkar%40123@cluster0.eka0ahu.mongodb.net/lost?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=wfoefbwqw
